; ModuleID = '/home/carl/AnghaBench/progress/extr_progress.c_nperror.c'
source_filename = "/home/carl/AnghaBench/progress/extr_progress.c_nperror.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@flag_monitor = common dso_local global i64 0, align 8
@flag_monitor_continuous = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [6 x i8] c"%s:%s\00", align 1
@errno = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @nperror(i8* %0) #0 {
  %2 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  %3 = load i64, i64* @flag_monitor, align 8
  %4 = icmp ne i64 %3, 0
  br i1 %4, label %8, label %5

5:                                                ; preds = %1
  %6 = load i64, i64* @flag_monitor_continuous, align 8
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %13

8:                                                ; preds = %5, %1
  %9 = load i8*, i8** %2, align 8
  %10 = load i32, i32* @errno, align 4
  %11 = call i32 @strerror(i32 %10)
  %12 = call i32 @printw(i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0), i8* %9, i32 %11)
  br label %16

13:                                               ; preds = %5
  %14 = load i8*, i8** %2, align 8
  %15 = call i32 @perror(i8* %14)
  br label %16

16:                                               ; preds = %13, %8
  ret void
}

declare dso_local i32 @printw(i8*, i8*, i32) #1

declare dso_local i32 @strerror(i32) #1

declare dso_local i32 @perror(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
